cabal-version:      2.4
name:               z-http
version:            0.1.0.0
author:             alissa-tung
maintainer:         alissa-tung@outlook.com
extra-source-files: ./README.md

library
  exposed-modules:
    Main
    Z.Data.HTTP
    Z.Data.HTTP.Internal
    Z.Data.HTTP.Request
    Z.Data.HTTP.Response
    Z.Data.Internal
    Z.HTTP.Client
    Z.HTTP.Internal
    Z.IO.Internal

  build-depends:
    , base    ^>=4.14.1.0
    , mtl     ^>=2.2.2
    , Z-Data
    , Z-IO

  default-language:   Haskell2010
  default-extensions:
    ConstraintKinds
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    ScopedTypeVariables
    TypeApplications
